--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit
-pillow
-matplotlib
-numpy
-pandas
+streamlit>=1.25.0
+pillow>=9.0.0
+matplotlib>=3.4.0
+numpy>=1.20.0
+pandas>=1.3.0
+requests>=2.25.0
+openai>=1.3.0
+python-dotenv>=0.19.0
